--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.25)
 project(SyntacticParser)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
-add_executable(SyntacticParser LL1_Parser.cpp)
+add_executable(SyntacticParser LR1_Parser.cpp)
